--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.DS_Store
+
 # Build and Release Folders
 bin-debug/
 bin-release/
@@ -12,6 +14,10 @@ bin-release/
 *.air
 *.ipa
 *.apk
+
+# exclude all jpeg and jpg
+*.jpeg
+*.jpg
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
